commit final change

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <a href=""><i class="fas fa-search"></i></a>
             <div class="cart-icon">
-              <a href="shopping-cart.html"
+              <a href="./shopping-cart.html"
                 ><i class="fas fa-shopping-cart"
                   ><span class="cart-info">0</span></i
                 ></a
@@ -87,6 +87,7 @@
       </section>
 
       <section>
+        <div class="filter-container"></div>
         <h2 class="home-h2-header">Best Collection of This Month</h2>
 
         <div class="all-product">
