--- a/products/singlePage.html
+++ b/products/singlePage.html
@@ -59,7 +59,7 @@
           <nav>
             <ul>
               <li><a href="../index.html" class="active">Home</a></li>
-              <li><a href="../products/singlePage.html">Men</a></li>
+
               <li><a href="../about.html">About</a></li>
               <li><a href="../contact.html">Contact</a></li>
             </ul>
@@ -79,7 +79,7 @@
       </div>
     </header>
     <main>
-      <div id="product-detail"></div>
+      <div class="product-detail"></div>
     </main>
 
     <footer>
@@ -92,7 +92,7 @@
         <a href="#"><i class="fab fa-instagram fa-customize"></i></a>
       </div>
     </footer>
-    <script type="module" src="js/singlePage.js"></script>
+    <script type="module" src="/js/singlePage.js "></script>
     <!-- <script type="module" src="js/displayError.js"></script> -->
     <script type="module" src="js/index.js"></script>
     <script type="module" src="js/cart.js"></script>
