--- a/checkout.html
+++ b/checkout.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <meta name="description" content="checkout here" />
     <title>RainyDays | Checkout</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap"
       rel="stylesheet"
@@ -28,22 +35,6 @@
       src="https://kit.fontawesome.com/b3766b9c07.js"
       crossorigin="anonymous"
     ></script>
-    <!-- Hotjar Tracking Code for http://127.0.0.1:5502/index.html -->
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 2856502, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
   </head>
   <body>
     <header>
@@ -58,7 +49,9 @@
 
       <div class="nav-wrapper-tablet">
         <div class="nav-container">
-          <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
+          <label for="hamburger-menu"
+            ><i class="fas fa-bars"></i
+          ></label>
           <input type="checkbox" id="hamburger-menu" />
           <nav>
             <ul>
@@ -76,7 +69,9 @@
               <a href=""><i class="fas fa-home"></i></a>
             </div>
             <a href=""><i class="fas fa-search"></i></a>
-            <a href="checkout.html"><i class="fas fa-shopping-cart"></i></a>
+            <a href="checkout.html"
+              ><i class="fas fa-shopping-cart"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -85,36 +80,7 @@
       <h1>Shopping Cart</h1>
 
       <div class="main-checkout_wrapper">
-        <div class="shopping-cart">
-          <!-- <section class="shipping-details_wrapper">
-            <div class="shopping-cart_checkbox">
-              <input type="checkbox" />
-            </div>
-            <div class="checkout-product-image">
-              <h3 class="title">product</h3>
-              <img src="images/W1.jpg" alt="Hiking Jackets for Men's" />
-            </div>
-            <div class="checkout-product_size">
-              <h3 class="title">detail</h3>
-              <h2 class="title-margin">Hiking Jacket</h2>
-              <p>Size : S</p>
-            </div>
-            <div class="quantity">
-              <h3 class="title">quantity</h3>
-              <label for="quantity"></label>
-              <input
-                id="quantity"
-                class="title-margin"
-                type="number"
-                value="1"
-              />
-            </div>
-            <div class="checkout-product_price">
-              <h3 class="title">price</h3>
-              <p class="title-margin">$500</p>
-            </div>
-          </section> -->
-        </div>
+        <div class="shopping-cart"></div>
         <section class="order-summary">
           <h1>Order summary</h1>
           <div class="total">
@@ -130,7 +96,9 @@
             <p class="title-blod">500Kr</p>
           </div>
           <div class="shopping-cart-button">
-            <a href="./success.html" class="cart custom_button payment"
+            <a
+              href="./success.html"
+              class="cart custom_button payment"
               >Pay Now</a
             >
             <a href="./index.html" class="cart custom_button"
@@ -144,7 +112,9 @@
       <h4>Copy Right &copy;</h4>
 
       <div class="icons">
-        <a href="#"><i class="fab fa-facebook-square fa-customize"></i></a>
+        <a href="#"
+          ><i class="fab fa-facebook-square fa-customize"></i
+        ></a>
         <a href="#"><i class="fab fa-instagram fa-customize"></i></a>
       </div>
     </footer>
