--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <meta
       name="description"
       content="Best outdoor activity jackets from rainydays"
     />
     <title>RainyDays | Contact</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap"
       rel="stylesheet"
@@ -33,22 +40,6 @@
       src="https://kit.fontawesome.com/b3766b9c07.js"
       crossorigin="anonymous"
     ></script>
-    <!-- Hotjar Tracking Code for http://127.0.0.1:5502/index.html -->
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 2856502, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
   </head>
   <body>
     <header>
@@ -63,7 +54,9 @@
 
       <div class="nav-wrapper-tablet">
         <div class="nav-container">
-          <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
+          <label for="hamburger-menu"
+            ><i class="fas fa-bars"></i
+          ></label>
           <input type="checkbox" id="hamburger-menu" />
           <nav>
             <ul>
@@ -99,9 +92,13 @@
         <section class="contact-page_detail">
           <h2>Let's Contact</h2>
           <p>
-            <i class="fas fa-subject-square-alt contact-icon"></i> 001-234-567
+            <i class="fas fa-subject-square-alt contact-icon"></i>
+            001-234-567
           </p>
-          <p><i class="fas fa-envelope contact-icon"></i>info@rainydays.com</p>
+          <p>
+            <i class="fas fa-envelope contact-icon"></i
+            >info@rainydays.com
+          </p>
         </section>
         <section class="contact-page_form">
           <form action=" " id="contactForm">
@@ -110,13 +107,23 @@
             </legend>
             <div class="success"></div>
             <label for="name">First Name</label>
-            <input type="text" name="firstName" id="firstName" class="form" />
+            <input
+              type="text"
+              name="firstName"
+              id="firstName"
+              class="form"
+            />
             <div class="contact-form-error" id="firstName-error">
               your must enter your first name
             </div>
 
             <label for="name">Last Name</label>
-            <input type="text" name="lastName" id="lastName" class="form" />
+            <input
+              type="text"
+              name="lastName"
+              id="lastName"
+              class="form"
+            />
             <div class="contact-form-error" id="lastName-error">
               your must enter your last name
             </div>
@@ -128,7 +135,12 @@
             </div>
 
             <label for="subject">Subject </label>
-            <input type="text" name="subject" id="subject" class="form" />
+            <input
+              type="text"
+              name="subject"
+              id="subject"
+              class="form"
+            />
             <div class="contact-form-error" id="subject-error">
               your subject must have filled
             </div>
@@ -148,7 +160,9 @@
       <h4>Copy Right &copy;</h4>
 
       <div class="icons">
-        <a href="#"><i class="fab fa-facebook-square fa-customize"></i></a>
+        <a href="#"
+          ><i class="fab fa-facebook-square fa-customize"></i
+        ></a>
         <a href="#"><i class="fab fa-instagram fa-customize"></i></a>
       </div>
     </footer>
